[tool.poetry]
name = "microshop"
version = "0.1.0"
description = "microshop"
authors = ["daboggg <vzinin@list.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}
pydantic = {extras = ["email"], version = "^2.5.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
